fix: update PR checks query to include additional fields

--- a/.github/workflows/1 - Update Dependencies.yml
+++ b/.github/workflows/1 - Update Dependencies.yml
@@ -231,7 +231,7 @@ jobs:
                 $elapsedSeconds += $checkIntervalSeconds
 
                 # Get PR check status
-                $checks = gh pr checks $prNumber --json state,name,conclusion | ConvertFrom-Json
+                $checks = gh pr checks $prNumber --json  bucket,link,name,state | ConvertFrom-Json
 
                 if (-not $checks) {
                     Write-Warning "No checks found for PR #$prNumber"
