fix: retrieve current version from manifest for semantic analysis

--- a/.github/workflows/2 - Release and Publish.yml
+++ b/.github/workflows/2 - Release and Publish.yml
@@ -111,6 +111,10 @@ jobs:
                   "trigger_source=$triggerSource" >> $env:GITHUB_OUTPUT
                   exit 0
               }
+
+              # Get current version from manifest for semantic analysis
+              $manifest = Import-PowerShellDataFile -Path "$($env:MANIFEST_PATH)"
+              $currentVersion = $manifest.ModuleVersion
           } else {
               # For manual dispatch with explicit bump, we always release
               $manifest = Import-PowerShellDataFile -Path "$($env:MANIFEST_PATH)"
