--- a/.github/workflows/2 - Release and Publish.yml
+++ b/.github/workflows/2 - Release and Publish.yml
@@ -77,11 +77,17 @@ jobs:
         run: |
           # Use Get-VersionBump function to determine current and new versions.
           Write-Host "Analyzing conventional commits..."
-          $VersionResult = & ./.github/scripts/Get-VersionBump.ps1
-          $ShouldRelease = $VersionResult.ShouldRelease
+          $VersionResult  = & ./.github/scripts/Get-VersionBump.ps1
+          $ShouldRelease  = $VersionResult.ShouldRelease
           $NewVersionType = $VersionResult.NewVersionType
-          $NewVersion = $VersionResult.NewVersion
-          $CurrentVersion = $VersionResult.CurrentVersion.ToString()
+          $NewVersion     = $VersionResult.NewVersion
+          $CurrentVersion = [version]$VersionResult.CurrentVersion
+
+          Write-host "`nAnalysis Results:"
+          Write-Host "Current version: $($CurrentVersion.ToString())"
+          Write-Host "Version bump type: $NewVersionType"
+          Write-Host "New version: $NewVersion"
+          Write-Host "Should release: $ShouldRelease"
 
           # Determine workflow trigger (push, pr-merge, manual workflow dispatch).
             if ($env:EVENT_NAME -eq "workflow_dispatch") {
@@ -104,7 +110,12 @@ jobs:
                 }
               $ShouldRelease = $true
 
-          }
+              Write-host "`nManual Version Dispatch Results:"
+              Write-Host "Current version: $($CurrentVersion.ToString())"
+              Write-Host "Version bump type: $NewVersionType"
+              Write-Host "New version: $($NewVersion.ToString())"
+              Write-Host "Should release: $ShouldRelease"
+          } #end if manual dispatch
 
           # If we're doing semantic analysis or manual dispatch with 'auto' versioning, get the versions from the script result.
           #if ($TriggerSource -in @("push","pr-merge") -or ($TriggerSource -eq "manual" -and $env:MANUAL_BUMP -eq "auto")) { # Not needed.
@@ -114,10 +125,10 @@ jobs:
               "should_release=false" >> $env:GITHUB_OUTPUT
               "trigger_source=$TriggerSource" >> $env:GITHUB_OUTPUT
               exit 0
-          }
+          } # end if ShouldRelease
 
           Write-Host "Version bump type: $NewVersionType"
-          Write-Host "Current version: $CurrentVersion"
+          Write-Host "Current version: $CurrentVersion.ToString()"
           Write-Host "New version: $NewVersion"
 
           "should_release=true" >> $env:GITHUB_OUTPUT
