--- a/.github/workflows/2 - Release and Publish.yml
+++ b/.github/workflows/2 - Release and Publish.yml
@@ -293,6 +293,7 @@ jobs:
       - name: Check if release already exists
         id: check_release
         shell: pwsh
+        continue-on-error: true
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -308,8 +309,7 @@ jobs:
                   Write-Host "Release $tagName does not exist yet"
                   "exists=false" >> $env:GITHUB_OUTPUT
               }
-          }
-          catch {
+          } catch {
               Write-Host "Release $tagName does not exist"
               "exists=false" >> $env:GITHUB_OUTPUT
           }
