--- a/.github/workflows/2 - Release and Publish.yml
+++ b/.github/workflows/2 - Release and Publish.yml
@@ -241,8 +241,8 @@ jobs:
       - name: Checkout repository (with new tag)
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
+          ref: main
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.merge_commit_sha || github.ref }}
 
       - name: Cache PowerShell modules
         uses: actions/cache@9255dc7a253b0ccc959486e2bca901246202afeb # v5.0.1
@@ -396,6 +396,9 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          ref: main
+          fetch-depth: 0
 
       - name: Verify version to publish
         shell: pwsh
