chore(deps): add project files and package references for .NET 4.8 and net8.0

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,17 @@ output/
 Scratch/
 testResults.xml
 
+# .NET build artifacts
+bin/
+obj/
+
+# NuGet
+*.nupkg
+packages/
+.nuget/
+
 ### VisualStudioCode ###
+.vs/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
