--- a/.github/workflows/PR Labeler.yml
+++ b/.github/workflows/PR Labeler.yml
@@ -10,20 +10,20 @@ concurrency:
 
 permissions:
   contents: read
-  pull-requests: write
 
 jobs:
   label:
     name: Apply labels from path changes
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@e3f713f2d8f53843e71c69a996d56f51aa9adfb9 # v2.14.1
         with:
           egress-policy: audit
-
-      #- name: Checkout repository
-      #  uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
       - name: Apply labels
         uses: actions/labeler@634933edcd8ababfe52f92936142cc22ac488b1b # v6.0.1
