--- a/.github/workflows/Deploy MkDocs.yml
+++ b/.github/workflows/Deploy MkDocs.yml
@@ -1,19 +1,20 @@
 name: 📖 Deploy MkDocs to GitHub Pages
 
 on:
-  # Run when changes are made to the contents of the docs folder, the MkDocs config, or this workflow.
+  # Run when changes are made to the contents of the docs folder, README, the MkDocs config, or this workflow.
   push:
     branches:
       - main
     paths:
       - "docs/**"
       - ".github/workflows/Deploy MkDocs.yml"
+      - "README.md"
       - "mkdocs.yml"
 
   # Allow manual triggering of the workflow.
   workflow_dispatch:
 
-permissions:  # added using https://github.com/step-security/secure-repo
+permissions:
   contents: read
 
 jobs:
@@ -37,6 +38,8 @@ jobs:
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
         with:
           python-version: "3.x" # specify the Python version
+          cache: "pip"
+          cache-dependency-path: "docs/requirements.txt"
 
       - name: 📦 Install Dependencies
         run: |
