--- a/.github/workflows/PR Labeler.yml
+++ b/.github/workflows/PR Labeler.yml
@@ -1,4 +1,4 @@
-name: PR Auto Labeler
+name: 🏷️ PR Auto Labeler
 
 on:
   pull_request:
@@ -20,11 +20,6 @@ jobs:
       pull-requests: write
 
     steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@e3f713f2d8f53843e71c69a996d56f51aa9adfb9 # v2.14.1
-        with:
-          egress-policy: audit
-
       - name: Apply labels
         uses: actions/labeler@634933edcd8ababfe52f92936142cc22ac488b1b # v6.0.1
         with:
