--- a/.github/workflows/Deploy MkDocs.yml
+++ b/.github/workflows/Deploy MkDocs.yml
@@ -1,19 +1,20 @@
 name: 📖 Deploy MkDocs to GitHub Pages
 
 on:
-  # Run when changes are made to the contents of the docs folder, the MkDocs config, or this workflow.
+  # Run when changes are made to the contents of the docs folder, README, the MkDocs config, or this workflow.
   push:
     branches:
       - main
     paths:
       - "docs/**"
       - ".github/workflows/Deploy MkDocs.yml"
+      - "README.md"
       - "mkdocs.yml"
 
   # Allow manual triggering of the workflow.
   workflow_dispatch:
 
-permissions:  # added using https://github.com/step-security/secure-repo
+permissions:
   contents: read
 
 jobs:
@@ -27,11 +28,6 @@ jobs:
       cancel-in-progress: true
 
     steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@e3f713f2d8f53843e71c69a996d56f51aa9adfb9 # v2.14.1
-        with:
-          egress-policy: audit
-
       - name: ✅ Checkout Repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
@@ -42,8 +38,10 @@ jobs:
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
         with:
           python-version: "3.x" # specify the Python version
+          cache: "pip"
+          cache-dependency-path: "docs/requirements.txt"
 
-      - name: ➕ Install Dependencies
+      - name: 📦 Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r docs/requirements.txt
