--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,22 @@
 repos:
 - repo: https://github.com/gitleaks/gitleaks
-  rev: v8.16.3
+  rev: v8.21.2
   hooks:
   - id: gitleaks
+
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v5.0.0
   hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
+  - id: check-yaml
+    args: ['--allow-multiple-documents']
+  - id: check-json
+  - id: check-merge-conflict
+  - id: check-added-large-files
+    args: ['--maxkb=1000']
+  - id: mixed-line-ending
+    args: ['--fix=lf']
+  - id: check-case-conflict
+
+exclude: ^(artifacts/|archive/|module/)
