--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,9 @@
+# Pre-commit Configuration
+#
+# Installation:   pip install pre-commit
+# Activate hooks: pre-commit install
+# Test all files: pre-commit run --all-files
+
 repos:
 - repo: https://github.com/gitleaks/gitleaks
   rev: v8.21.2
@@ -7,16 +13,21 @@ repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0
   hooks:
+
   - id: end-of-file-fixer
+
   - id: trailing-whitespace
+
   - id: check-yaml
     args: ['--allow-multiple-documents']
+
   - id: check-json
+
   - id: check-merge-conflict
-  - id: check-added-large-files
-    args: ['--maxkb=1000']
+
   - id: mixed-line-ending
     args: ['--fix=lf']
+
   - id: check-case-conflict
 
 exclude: ^(artifacts/|archive/|module/)
