--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,10 @@
   // See http://go.microsoft.com/fwlink/?LinkId=827846
   // for the documentation about the extensions.json format
   "recommendations": [
-    "ms-vscode.PowerShell",
+    "ms-vscode.powershell",
+    "ms-vscode.csharp",
     "streetsidesoftware.code-spell-checker",
     "ryanluker.vscode-coverage-gutters",
-    "DavidAnson.vscode-markdownlint"
+    "davidanson.vscode-markdownlint"
   ]
 }
