--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,47 @@
 {
-  // When enabled, will trim trailing whitespace when you save a file.
+  // PowerShell settings
+  "powershell.scriptAnalysis.enabled": true,
+  "powershell.scriptAnalysis.settingsPath": "build/PSScriptAnalyzerSettings.psd1",
+  "powershell.codeFormatting.preset": "OTBS",
+
+  // Editor defaults for consistent formatting
+  "editor.insertSpaces": true,
+  "editor.tabSize": 4,
+
+  // File formatting
   "files.trimTrailingWhitespace": true,
-  // When enabled, insert a final new line at the end of the file when saving it.
   "files.insertFinalNewline": true,
-  // When enabled, will trim all new lines after the final new line at the end of the file when saving it.
   "files.trimFinalNewlines": true,
-  // specifies the location of the explicitly ScriptAnalyzer settings file
-  "powershell.scriptAnalysis.settingsPath": "PSScriptAnalyzerSettings.psd1",
-  // specifies the PowerShell coding style used in this project (https://github.com/PoshCode/PowerShellPracticeAndStyle/issues/81)
-  "powershell.codeFormatting.preset": "OTBS"
+
+  // Markdown formatting
+  "[markdown]": {
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
+    "editor.formatOnSave": true,
+    "editor.tabSize": 2,
+    "editor.wordWrap": "on"
+  },
+
+  // JSON formatting
+  "[json]": {
+    "editor.tabSize": 2,
+    "editor.formatOnSave": true
+  },
+
+  // YAML formatting
+  "[yaml]": {
+    "editor.tabSize": 2,
+    "editor.formatOnSave": true
+  },
+
+  // C# settings
+  "[csharp]": {
+    "editor.tabSize": 4,
+    "editor.formatOnSave": true
+  },
+
+  // PowerShell formatting
+  "[powershell]": {
+    "editor.tabSize": 4,
+    "editor.formatOnSave": true
+  }
 }
